Legacy numeric literals should not permit separators or BigInt https://bugs.webkit.org/show_bug.cgi?id=199984

Reviewed by Keith Miller.

JSTests:

* stress/big-int-literals.js:
* stress/numeric-literal-separators.js:

Source/JavaScriptCore:

* parser/Lexer.cpp:
(JSC::Lexer<T>::parseOctal):
(JSC::Lexer<T>::parseDecimal):


Canonical link: https://commits.webkit.org/213968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247845 268f45cc-cd09-0410-ab3c-d52691b4dbfc